crates/granary/tests/compile_fail/kv_without_facet.stderr
error[E0277]: the trait bound `(): HasFacet<Kv, _>` is not satisfied
  --> tests/compile_fail/kv_without_facet.rs:48:21
   |
48 |         let _ = ctx.kv(); // ERROR: `()` does not contain the Kv facet
   |                     ^^ the trait `HasFacet<Kv, _>` is not implemented for `()`
   |
   = help: the following other types implement trait `HasFacet<F, I>`:
             `(A, B)` implements `HasFacet<A, Here>`
             `(A, B)` implements `HasFacet<B, There<Here>>`
             `(A, B, C)` implements `HasFacet<A, Here>`
             `(A, B, C)` implements `HasFacet<B, There<Here>>`
             `(A, B, C)` implements `HasFacet<C, There<There<Here>>>`
             `(A,)` implements `HasFacet<A, Here>`
note: required by a bound in `granary::kv::<impl GrainCtx<G>>::kv`
  --> src/kv.rs
   |
   |     pub fn kv<I>(&self) -> KvHandle<'_, G, I>
   |            -- required by a bound in this associated function
   |     where
   |         G::Facets: HasFacet<Kv, I>,
   |                    ^^^^^^^^^^^^^^^ required by this bound in `granary::kv::<impl GrainCtx<G>>::kv`
